--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <script src="https://kit.fontawesome.com/22218a2f89.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <noscript>
     <strong>We're sorry but client doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
